# alive_checker

./: Cargo.toml
src/: alive_script.rs  date.rs  error.rs  main.rs  script_blocker.rs  script_guardian.rs
