[package]
name = "alive_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "1.3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.79"
exitcode = "1.1.2"
regex = "1.5.5"